fix raindrops on firefox

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -421,7 +421,7 @@ html, body {
 
 .drop {
 	background:-webkit-gradient(linear,0% 0%,0% 100%, from(rgba(13,52,58,0) ), to(rgba(255,255,255,0.6))  );
-	background: -moz-linear-gradient(top, rgba(13,52,58,1) 0%, rgba(255,255,255,.6) 100%);
+	background: -moz-linear-gradient(top, rgba(13,52,58,0) 0%, rgba(255,255,255,0.6) 100%);
 	width:2px;
 	height:89px;
 	position: absolute;
